# gsmc-bot

./: .gitignore  Cargo.toml  Dockerfile  readme.md
.github/workflows/: main.yml
src/: api.rs  main.rs  utils.rs
