[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", features = [
    "builder",
    "cache",
    "chrono",
    "client",
    "gateway",
    "model",
    "http",
    "utils",
    "rustls_backend",
], default-features = false }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11"
log = "0.4"
flexi_logger = "0.25"
log-panics = "2.1"
serde = "1.0.163"
